feat: add contact us and account deletion endpoints, enhance user market place functionality
